# coronarium

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  PLAN.md  README.md  action.yml  deny.toml  osv-scanner.toml  rust-toolchain.toml  top.json
.cargo/: audit.toml  config.toml
.github/: FUNDING.yml
.github/actions/proxy/: action.yml
.github/workflows/: ci.yml  consumer-smoke.yml  dco.yml  docker.yml  homebrew-formula.yml  osv-mirror.yml  release.yml  security.yml  typosquat-data.yml  windows-smoke.yml
HomebrewFormula/: coronarium.rb
comment/: action.yml
crates/coronarium/: Cargo.toml
crates/coronarium-common/: Cargo.toml
crates/coronarium-common/src/: lib.rs
crates/coronarium-core/: Cargo.toml
crates/coronarium-core/src/: events.rs  html.rs  lib.rs  matcher.rs  policy.rs  report.rs  stats.rs  tamper.rs
crates/coronarium-ebpf/: Cargo.toml
crates/coronarium-ebpf/src/: main.rs
crates/coronarium-proxy/: Cargo.toml  README.md
crates/coronarium-proxy/src/: ca.rs  daemon.rs  decision.rs  install.rs  lib.rs  osv.rs  osv_mirror.rs  parser.rs  proxy.rs  rewrite.rs  rewrite_npm.rs  rewrite_nuget.rs  rewrite_pypi.rs  sigstore_verify.rs  typosquat.rs
crates/coronarium-win/: Cargo.toml
crates/coronarium-win/src/: firewall.rs  main.rs  win.rs
crates/coronarium/src/: cgroup.rs  cli.rs  doctor.rs  enforcer.rs  events.rs  html.rs  install_gate.rs  loader.rs  main.rs  matcher.rs  policy.rs  report.rs  resolve.rs  resolve_hostnames.rs  resolve_refresh.rs
crates/sakimori/: Cargo.toml
crates/sakimori-core/src/: actions.rs  attribution.rs  editor_extensions.rs  html.rs  installs.rs  iocs.rs  lib.rs  report.rs
crates/sakimori-core/tests/: extension_report_matrix.rs
crates/sakimori-proxy/: Cargo.toml
crates/sakimori-proxy/src/: decision.rs  git_fetch.rs  hub_ingest.rs  lib.rs  osv.rs  otlp.rs  parser.rs  proxy.rs  registries.rs  rewrite_vscode.rs  typosquat.rs  vsix_inspect.rs
crates/sakimori-proxy/tests/: hub_ingest_e2e.rs  hub_ingest_live.rs  lifecycle_strip_roundtrip.rs  otlp_proto_roundtrip.rs  proxy_http_e2e.rs  proxy_https_e2e.rs  proxy_lifecycle_e2e.rs  proxy_multitag_prestrip_e2e.rs  proxy_otlp_e2e.rs  proxy_pypi_lifecycle_e2e.rs  proxy_strip_cache_e2e.rs  proxy_vscode_marketplace_e2e.rs  proxy_vsix_lifecycle_e2e.rs
crates/sakimori-win/src/: win.rs
crates/sakimori/src/: cli.rs  daemon.rs  hub_credentials.rs  kprobe_override.rs  main.rs
crates/sakimori/tests/: deps_check_e2e.rs  install_gate_idempotency.rs
examples/: coronarium.yml
job/: pre.js
packaging/git-hooks/: pre-commit
packaging/macos/: README.md  dev.coronarium.watch.plist
proxy/: README.md  action.yml  main.js
proxy/test/: main.test.mjs
scripts/: build-osv-mirror.py  build-typosquat-data.py  npm-top-baseline.json  update-homebrew-formula.py
tests/fixtures/: package-lock.json  packages.lock.json  requirements.txt
verify-cache/: action.yml  main.js
