[package]
name = "coronarium-win"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "ETW-based audit counterpart to coronarium (Windows). Experimental."

# Own workspace so the Windows-specific deps (ferrisetw, etc.) don't
# pollute the main Linux workspace.
[workspace]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
ferrisetw = "1.2"

[profile.release]
lto = true
codegen-units = 1
