[package]
name = "sakimori-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTPS MITM proxy that enforces minimumReleaseAge at the registry fetch layer."

[lib]
# Exposing as a lib so the main `sakimori` binary can embed the proxy
# behind a subcommand without a second binary.
name = "sakimori_proxy"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
ureq = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
sakimori-core = { path = "../sakimori-core" }

# Proxy / TLS plumbing. `hudsucker` takes care of the CONNECT tunnel,
# per-host leaf cert signing, and the request/response hook plumbing.
# `rcgen` generates the root CA on first run.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "signal", "fs"] }
hudsucker = { version = "0.22", default-features = false, features = ["rustls-client", "rcgen-ca"] }
rcgen = { version = "0.13", default-features = false, features = ["pem", "aws_lc_rs"] }
time = "0.3"
rustls = { version = "0.23", default-features = false, features = ["std", "logging", "tls12"] }
http = "1"
http-body-util = "0.1"
bytes = "1"
semver = "1"

# Sigstore bundle parsing + semantic verification (P0-1 stage 1).
# Crypto verification (DSSE signature, Fulcio cert chain, Rekor SET)
# is the next stage and will introduce p256 / x509-parser / ed25519
# deps. We keep this list intentionally small for now.
base64 = "0.22"
sha1 = "0.10"
sha2 = "0.10"
tar = "0.4"
flate2 = "1"
toml = { workspace = true }

# Custom upstream TLS client for `extra_upstream_roots`. Versions
# pinned to match what hudsucker 0.22 itself uses internally — the
# `ClientConfig` types these construct must be the same rustls
# version hudsucker's connector expects (rustls 0.22 via
# tokio-rustls). We reuse `hudsucker::rustls` for the rustls types
# so we don't add a second `rustls` direct dep.
hyper-rustls = { version = "0.26", default-features = false, features = ["http1", "logging", "ring", "tls12", "webpki-tokio"] }
hyper-util = { version = "0.1", default-features = false, features = ["client-legacy", "http1", "tokio"] }
webpki-roots = "0.26"
# NB: PEM parsing uses `rustls_pki_types::pem::PemObject` (reached
# via `hudsucker::rustls::pki_types`). The `rustls-pemfile` crate
# would be the obvious dep but it was archived in August 2025
# (RUSTSEC-2025-0134) and its maintainers point users at
# rustls-pki-types' built-in `PemObject` trait.

[dev-dependencies]
proptest = { workspace = true }
# Mock HTTPS upstream for proxy_https_e2e.rs. tokio-rustls 0.25
# matches hudsucker's internal rustls 0.22 pin (same TLS types
# both ends of the proxy must speak).
tokio-rustls = { version = "0.25", default-features = false, features = ["logging", "tls12", "ring"] }
